--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,10 +6,15 @@
  *= require_self
  *= require_tree . 
 */
+html{
+	-webkit-text-size-adjust: 100%;
+}
 body{
 	font-family: "HelveticaNeue", Arial, Helvetica, sans-serif;
 }
-
+a:link {
+	-webkit-tap-highlight-color: rgba(0,0,0,0.2);
+}
 .table-view {
 	background: #7c0c18;
 }
@@ -132,3 +137,40 @@ body{
  	top: 1.833em;
 
  }
+.cssgradients #tab-bar {
+	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#353535), color-stop(0.55, #212021), color-stop(0.551, #090809), to(#050405));
+	background-image: linear-gradient(top, #353535, #212021 55%, #090809 55.1%, #050405);
+}
+.cssgradients .page-spots #tab-spots a {
+	background: -webkit-gradient(linear, left top, left bottom, from(rgba(40, 40, 40, .9)), color-stop(0.55, rgba(35, 35, 35, .5)), to(rgba(46, 46, 46, .1)));
+	background-image: linear-gradient(rgba(40, 40, 40, .9), rgba(35, 35, 35, .5) 55%, rgba(46, 46, 46, .1));
+}
+.page-spots #tab-spots a:before {
+	content: "";
+	display: block;
+	height: 0.5em;
+	margin-left: -0.5em;
+	left: 50%;
+	position: absolute;
+	margin-top: -1px;
+	top: 0;
+	width: 1em;
+}
+.cssgradients .page-spots #tab-spots a:before {
+	background-image: -webkit-gradient(radial, 50% 0, 0, 50% 0, 7, from(rgba(236, 223, 156, 0.9)), to(rgba(0, 0, 0, 0)));
+	background-image: radial-gradient(rgba(236, 223, 156, 0.9), rgba(0, 0, 0, 0));
+}
+.standalone * {
+	-webkit-touch-callout: none;
+}
+
+.standalone #tab-bar {
+	margin-top: 0.3em;
+	position: absolute;
+	width: 100%;
+	bottom: 0;
+	z-index: 200;
+}
+.standalone body{
+	padding-bottom: 4.5em;
+}
